fixed notification entity label alignment

--- a/ui/src/components/Notification/Notification.scss
+++ b/ui/src/components/Notification/Notification.scss
@@ -14,4 +14,8 @@
     .param {
         font-weight: bold;
     }
+
+    .EntityLabel {
+      vertical-align: inherit;
+    }
 }
